--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <li class="passive"><a href="research.html" title="Research">RESEARCH</a></li>
 
-          <li class="passive"><a href="YixuanLiu_CV.pdf" title="CV">CV</a></li>
+          <li class="passive"><a href="YixuanLiu.pdf" title="CV">CV</a></li>
 
           <li class="passive"><a href="others.html" title="Others">OTHERS</a></li>
 
