--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 -->
       <div class="row marketing">
 	<div class="col-sm-4">
-	  <img class="img", height = 180px, alt="Long Zhao" src="Long.jpg">
+	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpg">
 	  </div>
 	<div class="col-xs-offset-5">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
 	  <p>
  <!--      I am currently a Ph.D. candidate in Decision Science in the McCombs School of Business at the University of Texas at Austin. I will join NUS business school this summer. My research interests lie in data-driven decision making. My advisors are <a href="https://kumarmuthuramanwebsite.appspot.com/index.php">Kumar Muthuraman</a> and <a href="https://faculty.mccombs.utexas.edu/deepayan.chakrabarti/">Deepayan Chakrabarti</a>. -->
-	  I am an Assistant Professor in the <a href="https://bschool.nus.edu.sg/analytics-operations/">Department of Analytics and Operations</a> at the <a href="https://bschool.nus.edu.sg/">National University of Singapore Business School</a>. I received my Ph.D. in Decision Sciences from the McCombs School of Business at the University of Texas at Austin in 2019. My research interests lie in data-driven decision making. More specifically speaking, I want to develop decision tools that are both easy to understand and perform very well empirically.
+	  I am an Assistant Professor in the <a href="https://bschool.nus.edu.sg/analytics-operations/">Management Information Systems Area</a> at the <a href="https://bschool.nus.edu.sg/">Krannert School of Management, Purdue University</a>. I received my Ph.D. in Information, Risk, and Operations Management from the McCombs School of Business at the University of Texas at Austin in 2020. My research interests lie in ditigal platforms and healthcare analytics.
 	  </div>
 </div>
 
