--- a/research.html
+++ b/research.html
@@ -79,15 +79,15 @@
 <br><br>
 
 
-      <div class="footer">
+<div class="footer">
         <p align="center">        
-        <a href="mailto:bizlzha@nus.edu.sg">bizlzha@nus.edu.sg</a>
+        <a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a>
         </p>
         <p align="center">
-<!-- Department of Analytics and Operations<br>
-National University of Singapore Business School
+<!-- Department of Management<br>
+Krannert School of Management, Purdue University
 <br> -->
-15 Kent Ridge Dr, BIZ1 8-61, Singapore 119245
+Krannert Building (KRAN) Room 333, 403 W State St., West Lafayette, IN 47907
         </p>
       </div>
 
