--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 
           <li class="passive"><a href="research.html" title="Research">RESEARCH</a></li>
 
+	  <li class="passive"><a href="teaching.html" title="Teaching">TEACHING</a></li>
+		
           <li class="passive"><a href="YixuanLiu.pdf" title="CV">CV</a></li>
 
-          <li class="passive"><a href="others.html" title="Others">OTHERS</a></li>
+
 
 <!--	  <li class="passive"><a href="https://scholar.google.com/citations?user=KDr_fT0AAAAJ&hl=en&oi=ao" title="CV">GSCHOLAR</a></li>
 -->
