--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
 	  <p>
  <!--      I am currently a Ph.D. candidate in Decision Science in the McCombs School of Business at the University of Texas at Austin. I will join NUS business school this summer. My research interests lie in data-driven decision making. My advisors are <a href="https://kumarmuthuramanwebsite.appspot.com/index.php">Kumar Muthuraman</a> and <a href="https://faculty.mccombs.utexas.edu/deepayan.chakrabarti/">Deepayan Chakrabarti</a>. -->
-	  I am an Assistant Professor in the <a href="https://bschool.nus.edu.sg/analytics-operations/">Management Information Systems Area</a> at the <a href="https://bschool.nus.edu.sg/">Krannert School of Management, Purdue University</a>. I received my Ph.D. in Information, Risk, and Operations Management from the McCombs School of Business at the University of Texas at Austin in 2020. My research interests lie in ditigal platforms and healthcare analytics.
+	  I am an Assistant Professor in the <a href="https://krannert.purdue.edu/academics/MIS/">Management Information Systems Area</a> at the <a href="https://krannert.purdue.edu/">Krannert School of Management, Purdue University</a>. I received my Ph.D. in Information, Risk, and Operations Management from the McCombs School of Business at the University of Texas at Austin in 2020. My research interests lie in ditigal platforms and healthcare analytics.
 	  </div>
 </div>
 
