--- a/research.html
+++ b/research.html
@@ -74,7 +74,7 @@
 </ol>
 <br> -->
 
-<a href="https://scholar.google.com/citations?user=CxXRIUgAAAAJ&hl=en&oi=sra">Google Scholar</a>
+<!-- <a href="https://scholar.google.com/citations?user=CxXRIUgAAAAJ&hl=en&oi=sra">Google Scholar</a>-->
 
 <br><br>
 
