--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
 
 <h4>Research Papers:</h4>
 <ol>
-<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, Forthcoming at Production and Operations Management.</li>
+<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, Forthcoming at <i>Production and Operations Management</i>.</li>
 <li> “Pricing, Quality and Competition at On-Demand Healthcare Service Platforms,” with Xiaofang Wang, Steve Gilbert and Guoming Lai, Major Revision at Manufacturing & Service Operations Management.</li>
 <li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou. </li>
 </ol>
