--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
       </div>
 -->
       <div class="row marketing">
-	<div class="col-sm-4">
-	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpg">
-	  </div>
 	<div class="col-xs-offset-5">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
 	  <p>
@@ -57,39 +54,49 @@
     Management Information Systems Area <br>
     Kr>annert School of Management <br>
     Purdue University <br>
+	</p>
     
+		<p>
     <b>Email:</b> <a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a> <br>
+    <b>Office:</b> KRAN 333<br>
+
      <a href="YixuanLiu.pdf"><b>CV</b></a>  <br>
 	  </div>
+	</p>      
+	   	<div class="col-sm-4">
+	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpg">
+	  </div>   
 </div>
 
-<h4><b>Education</b></h4>
+<p>	  
+<b>Education</b>
 Ph.D., Information, Risk, and Operations Management, University of Texas at Austin, 2020 <br>
-B.S., Pure and Applied Mathematics/B.A., Economics, Tsinghua University, 2014
-<br>
+B.S., Pure and Applied Mathematics/B.A., Economics, Tsinghua University, 2014<br>
+</p>
+	    
 
-
-<h4><b>Research</b></h4>
+<p>
+<b>Research</b>
 <ol>
 <li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, Forthcoming at <i>Production and Operations Management</i>.</li>
 <li> “Pricing, Quality and Competition at On-Demand Healthcare Service Platforms,” with Xiaofang Wang, Steve Gilbert and Guoming Lai, Major Revision at <i>Manufacturing & Service Operations Management</i>.</li>
 <li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou. </li>
 </ol>
-<br>
+</p>
 
-<h4><b>Teaching</b></h4>
-<h4>Purdue University</h4>
+	<p>
+<b>Teaching</b>
+Purdue University
 <ol>
 <li>MGMT 6900 - Doctoral Topics MIS II, Fall 2020</li>
 <li>MGMT 545 - Systems Development, Spring 2021 (scheduled).</li>
 </ol>
-<br>
 
-<h4>University of Texas at Austin</h4>
+University of Texas at Austin
 <ol>
 <li>OM s335 – Operations Management (Undergraduate Core), Summer 2018</li>
 </ol>
-<br>
+</p>
 
 
       <div class="footer">
