--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
       </div>
 -->
       <div class="row marketing">
+	      	   	<div class="col-sm-4">
+	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpg">
+	  </div> 
 	<div class="col-xs-offset-5">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
 	  <p>
     Assistant Professor of Management <br>
     Management Information Systems Area <br>
-    Kr>annert School of Management <br>
+    Krannert School of Management <br>
     Purdue University <br>
 	</p>
     
@@ -63,13 +66,11 @@
      <a href="YixuanLiu.pdf"><b>CV</b></a>  <br>
 	  </div>
 	</p>      
-	   	<div class="col-sm-4">
-	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpg">
-	  </div>   
+  
 </div>
 
 <p>	  
-<b>Education</b>
+<b>Education</b><br>
 Ph.D., Information, Risk, and Operations Management, University of Texas at Austin, 2020 <br>
 B.S., Pure and Applied Mathematics/B.A., Economics, Tsinghua University, 2014<br>
 </p>
@@ -84,8 +85,8 @@ B.S., Pure and Applied Mathematics/B.A., Economics, Tsinghua University, 2014<br
 </ol>
 </p>
 
-	<p>
-<b>Teaching</b>
+<p>
+<b>Teaching</b><br>
 Purdue University
 <ol>
 <li>MGMT 6900 - Doctoral Topics MIS II, Fall 2020</li>
