--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="header">
 
-        <h3 class="text-muted">Yixuan Liu</h3>
+        <class="text-muted",style="font-size:30px">Yixuan Liu
       </div>
 <!---
       <div class="jumbotron">
@@ -50,10 +50,10 @@
 	      	   	<div class="col-sm-4">
 	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpg">
 	  </div> 
-	<div class="col-xs-offset-5">
+	<div class="col-xs-offset-4">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
 	  <p>
-    Assistant Professor of Management <br>
+    Assistant Professor <br>
     Management Information Systems Area <br>
     Krannert School of Management <br>
     Purdue University <br>
