--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="header">
 
-        <class="text-muted",style="font-size:30px">Yixuan Liu
+        <h3 class="text-muted">Yixuan Liu</h3>
       </div>
 <!---
       <div class="jumbotron">
