--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="header">
 
-        <p class="text-muted">Yixuan Liu</p>
+        <p class="text-muted"><font size="48">Yixuan Liu</font></p>
       </div>
 <!---
       <div class="jumbotron">
@@ -48,7 +48,7 @@
 -->
       <div class="row marketing">
 	      	   	<div class="col-sm-4">
-	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpg">
+	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.jpeg">
 	  </div> 
 	<div class="col-xs-offset-5">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
