--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <div class="container">
       <div class="header">
 
-        <p class="text-muted"><font size="36">Yixuan Liu</font></p>
+
+        <p class="text-muted"><br>
+		<font size="24">Yixuan Liu</font>
+	      </p>
       </div>
 <!---
       <div class="jumbotron">
