--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <div class="header">
 
 
-        <p class="text-muted"><br>
-		<font size="24">Yixuan Liu</font>
+        <p class="text-muted"><br><br>
+		<font size=20px>Yixuan Liu</font>
 	      </p>
       </div>
 <!---
