--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
         <p class="text-muted"><br><br>
-		<font size=20px>Yixuan Liu</font>
+		<font size="+5">Yixuan Liu</font>
 	      </p>
       </div>
 <!---
