--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
         <p class="text-muted"><br><br>
-		<font size="+1">Yixuan Liu</font>
+		<font size="+2"><b>Yixuan Liu</b></font>
 	      </p>
       </div>
 <!---
