--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ B.S., Pure and Applied Mathematics/B.A., Economics, Tsinghua University, 2014<br
 <b>Teaching</b><br>
 Purdue University
 <ol>
-<li>MGMT 6900 - Doctoral Topics MIS II, Fall 2020</li>
-<li>MGMT 545 - Systems Development, Spring 2021 (scheduled).</li>
+<li>MGMT 6900 – Doctoral Topics MIS II, Fall 2020</li>
+<li>MGMT 545 – Systems Development, Spring 2021 (scheduled).</li>
 </ol>
 
 University of Texas at Austin
