--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
 
 <p>	  
 <b>Education</b><br>
-Ph.D., Information, Risk, and Operations Management, University of Texas at Austin, 2020 <br>
-B.S., Pure and Applied Mathematics/B.A., Economics, Tsinghua University, 2014<br>
+University of Texas at Austin<br>
+&nbsp; Ph.D., Information, Risk, and Operations Management, 2020 <br>
+Tsinghua University<br>
+&nbsp; B.S., Pure and Applied Mathematics, 2014<br>
+&nbsp; B.A., Economics, 2014<br>
 </p>
 	    
 
@@ -91,15 +94,15 @@ B.S., Pure and Applied Mathematics/B.A., Economics, Tsinghua University, 2014<br
 <p>
 <b>Teaching</b><br>
 Purdue University
-<ol>
+<ul>
 <li>MGMT 6900 – Doctoral Topics MIS II, Fall 2020</li>
 <li>MGMT 545 – Systems Development, Spring 2021 (scheduled).</li>
-</ol>
+</ul>
 
 University of Texas at Austin
-<ol>
+<ul>
 <li>OM s335 – Operations Management (Undergraduate Core), Summer 2018</li>
-</ol>
+</ul>
 </p>
 
 
