--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 <p>	  
 <b>Education</b><br>
 University of Texas at Austin<br>
-&nbsp; Ph.D., Information, Risk, and Operations Management, 2020 <br>
+&emsp; Ph.D., Information, Risk, and Operations Management, 2020 <br>
 Tsinghua University<br>
-&nbsp; B.S., Pure and Applied Mathematics, 2014<br>
-&nbsp; B.A., Economics, 2014<br>
+&emsp; B.S., Pure and Applied Mathematics, 2014<br>
+&emsp; B.A., Economics, 2014<br>
 </p>
 	    
 
