--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <p>	  
 <b>Education</b><br>
-University of Texas at Austin<br>
+McCombs School of Business, University of Texas at Austin<br>
 &emsp; Ph.D., Information, Risk, and Operations Management, 2020 <br>
 Tsinghua University<br>
 &emsp; B.S., Pure and Applied Mathematics, 2014<br>
@@ -95,7 +95,7 @@ Tsinghua University<br>
 <b>Teaching</b><br>
 Purdue University
 <ul>
-<li>MGMT 6900 – Doctoral Topics MIS II, Fall 2020</li>
+<li>MGMT 690 – Doctoral Topics MIS II, Fall 2020</li>
 <li>MGMT 545 – Systems Development, Spring 2021 (scheduled).</li>
 </ul>
 
