--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 -->
       <div class="row marketing">
 	      	   	<div class="col-sm-4">
-	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu_pic.JPG">
+	  <img class="img", height = 180px, alt="Yixuan Liu" src="IMG_7575.JPG">
 	  </div> 
 	<div class="col-xs-offset-5">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
