--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 -->
       <div class="row marketing">
 	      	   	<div class="col-sm-4">
-	  <img class="img", height = 180px, alt="Yixuan Liu" src="IMG_7575.JPG">
+	  <img class="img", height = 180px, alt="Yixuan Liu" src="YixuanLiu.jpg">
 	  </div> 
 	<div class="col-xs-offset-5">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
@@ -86,7 +86,7 @@ Tsinghua University<br>
 <b>Research</b>
 <ol>
 <li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, Forthcoming at <i>Production and Operations Management</i>.</li>
-<li> “Pricing, Quality and Competition at On-Demand Healthcare Service Platforms,” with Xiaofang Wang, Steve Gilbert and Guoming Lai, Major Revision at <i>Manufacturing & Service Operations Management</i>.</li>
+<li> “Pricing, Quality and Competition at On-Demand Healthcare Service Platforms,” with Xiaofang Wang, Steve Gilbert and Guoming Lai, Minor Revision at <i>Manufacturing & Service Operations Management</i>.</li>
 <li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou. </li>
 </ol>
 </p>
