--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Tsinghua University<br>
 <b>Research</b>
 <ol>
 <li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, Forthcoming at <i>Production and Operations Management</i>.</li>
-<li> “Pricing, Quality and Competition at On-Demand Healthcare Service Platforms,” with Xiaofang Wang, Steve Gilbert and Guoming Lai, Minor Revision at <i>Manufacturing & Service Operations Management</i>.</li>
+<li> “Pricing, Quality and Competition at On-Demand Healthcare Service Platforms,” with Xiaofang Wang, Steve Gilbert and Guoming Lai, Accepted at <i>Manufacturing & Service Operations Management</i>.</li>
 <li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou. </li>
 </ol>
 </p>
