--- a/index.html
+++ b/index.html
@@ -56,15 +56,11 @@
 	<div class="col-xs-offset-5">
 	  <!-- <p class="lead">Hi, I'm Jonathan McGlone and I make things on the web for academic libraries and scholarly publishers.</p> -->
 	  <p>
-    Assistant Professor <br>
-    Management Information Systems Area <br>
-    Krannert School of Management <br>
-    Purdue University <br>
+    Assistant Professor of Management Information Systems <br>
 	</p>
     
 		<p>
-    <b>Email:</b> <a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a> <br>
-    <b>Office:</b> KRAN 333<br>
+    <b>Email:</b><a href="mailto:yixuanliu@ceibs.edu">yixuanliu@ceibs.edu</a>/<a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a> <br>
 
      <a href="YixuanLiu.pdf"><b>CV</b></a>  <br>
 	  </div>
@@ -72,6 +68,15 @@
   
 </div>
 
+<p>	  
+<b>Employment</b><br>
+China Europe International Business School<br>
+&emsp; Assistant Professor of Management Information Systems, 2022 -- <br>
+Krannert School of Management, Purdue University<br>
+&emsp; Assistant Professor of Management (Management Information Systems Area), 2020 --<br>
+</p>
+	  
+	  
 <p>	  
 <b>Education</b><br>
 McCombs School of Business, University of Texas at Austin<br>
@@ -96,7 +101,7 @@ Tsinghua University<br>
 Purdue University
 <ul>
 <li>MGMT 690 – Doctoral Topics MIS II, Fall 2020</li>
-<li>MGMT 545 – Systems Development, Spring 2021 (scheduled).</li>
+<li>MGMT 545 – Systems Development, Spring 2021&2022</li>
 </ul>
 
 University of Texas at Austin
