--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</p>
     
 		<p>
-    <b>Email:</b><a href="mailto:yixuanliu@ceibs.edu">yixuanliu@ceibs.edu</a>/<a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a> <br>
+    <b>Email: </b><a href="mailto:yixuanliu@ceibs.edu">yixuanliu@ceibs.edu</a>/<a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a> <br>
 
      <a href="YixuanLiu.pdf"><b>CV</b></a>  <br>
 	  </div>
@@ -71,9 +71,9 @@
 <p>	  
 <b>Employment</b><br>
 China Europe International Business School<br>
-&emsp; Assistant Professor of Management Information Systems, 2022 -- <br>
+&emsp; Assistant Professor of Management Information Systems, 2022 - <br>
 Krannert School of Management, Purdue University<br>
-&emsp; Assistant Professor of Management (Management Information Systems Area), 2020 --<br>
+&emsp; Assistant Professor of Management (Management Information Systems Area), 2020 - <br>
 </p>
 	  
 	  
@@ -106,20 +106,17 @@ Purdue University
 
 University of Texas at Austin
 <ul>
-<li>OM s335 – Operations Management (Undergraduate Core), Summer 2018</li>
+<li>OM s335 – Operations Management, Summer 2018</li>
 </ul>
 </p>
 
 
       <div class="footer">
         <p align="center">        
-        <a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a>
+        <a href="mailto:yixuanliu@ceibs.edu">yixuanliu@ceibs.edu</a>
         </p>
         <p align="center">
-<!-- Department of Management<br>
-Krannert School of Management, Purdue University
-<br> -->
-Krannert Building (KRAN) Room 333, 403 W State St., West Lafayette, IN 47907
+China Europe International Business School, Shanghai, China
         </p>
       </div>
 
