--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@ Tsinghua University<br>
 <b>Teaching</b><br>
 Purdue University
 <ul>
-<li>MGMT 690 – Doctoral Topics MIS II, Fall 2020</li>
+<li>MGMT 479 – Data Visualization, Spring 2022</li>
 <li>MGMT 545 – Systems Development, Spring 2021&2022</li>
+<li>MGMT 690 – Doctoral Topics MIS II, Fall 2020</li>
 </ul>
 
 University of Texas at Austin
