--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ China Europe International Business School<br>
 &emsp; Assistant Professor of Management Information Systems, 2022 - <br>
 Krannert School of Management, Purdue University<br>
 &emsp; Assistant Professor of Management (Management Information Systems Area), 2020 - <br>
+&emsp; <li>- On Leave </li>	
 </p>
 	  
 	  
