--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ Tsinghua University<br>
 <p>
 <b>Research</b>
 <ol>
-<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, Forthcoming at <i>Production and Operations Management</i> 30: 402-418.</li>
-<li> <a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2022.1152">"On the Participation, Competition and Welfare at Customer-Intensive Discretionary Service Platforms,"</a> with Xiaofang Wang, Steve Gilbert and Guoming Lai <i>Manufacturing & Service Operations Management</i> 25(1):218-234. </li>
+<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, <i>Production and Operations Management</i> 30: 402-418.</li>
+<li> <a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2022.1152">"On the Participation, Competition and Welfare at Customer-Intensive Discretionary Service Platforms,"</a> with Xiaofang Wang, Steve Gilbert and Guoming Lai, <i>Manufacturing & Service Operations Management</i> 25(1):218-234. </li>
  -- Previously titled "Pricing, Quality and Competition at On-Demand Healthcare Service Platforms" <br>
 <li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou. </li>
 </ol>
@@ -99,6 +99,11 @@ Tsinghua University<br>
 
 <p>
 <b>Teaching</b><br>
+CEIBS
+<ul>
+<li>Information Technology in the New Economy (MBA Elective), Jan 2023</li>
+</ul>
+	
 Purdue University
 <ul>
 <li>MGMT 479 – Data Visualization, Spring 2022</li>
