--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</p>
     
 		<p>
-    <b>Email: </b><a href="mailto:yixuanliu@ceibs.edu">yixuanliu@ceibs.edu</a>/<a href="mailto:liu3179@purdue.edu">liu3179@purdue.edu</a> <br>
+    <b>Email: </b><a href="mailto:yixuanliu@ceibs.edu">yixuanliu@ceibs.edu</a><br>
 
      <a href="YixuanLiu.pdf"><b>CV</b></a>  <br>
 	  </div>
@@ -90,10 +90,10 @@ Tsinghua University<br>
 <p>
 <b>Research</b>
 <ol>
-<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, <i>Production and Operations Management</i> 30: 402-418.</li>
+<li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou, <i>Information Systems Research.</i> </li>
 <li> <a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2022.1152">"On the Participation, Competition and Welfare at Customer-Intensive Discretionary Service Platforms,"</a> with Xiaofang Wang, Steve Gilbert and Guoming Lai, <i>Manufacturing & Service Operations Management</i> 25(1):218-234. </li>
  -- Previously titled "Pricing, Quality and Competition at On-Demand Healthcare Service Platforms" <br>
-<li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou. </li>
+<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, <i>Production and Operations Management</i> 30: 402-418.</li>
 </ol>
 </p>
 
@@ -101,7 +101,10 @@ Tsinghua University<br>
 <b>Teaching</b><br>
 CEIBS
 <ul>
-<li>Information Technology in the New Economy (MBA Elective), Jan 2023</li>
+<li>Artificial Intelligence: The New Frontier of Productivity (EMBA Elective), Oct 2025 (scheduled)</li>
+<li>Information Technology Management and Innovation in the Digital Era (EE), Apr 2025</li>
+<li>Information Technology in the New Economy (MBA Elective), Jan 2023/2024, Nov 2024</li>
+<li>Data Analytics and Operations Management (MBA Core), Oct 2024</li>
 </ul>
 	
 Purdue University
