--- a/index.html
+++ b/index.html
@@ -88,12 +88,23 @@ Tsinghua University<br>
 	    
 
 <p>
-<b>Research</b>
+<b>Publications</b>
 <ol>
-<li> “On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Oﬄine Appointment,” with Ashish Agarwal, Guoming Lai and Weihua Zhou, <i>Information Systems Research.</i> </li>
-<li> <a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2022.1152">"On the Participation, Competition and Welfare at Customer-Intensive Discretionary Service Platforms,"</a> with Xiaofang Wang, Steve Gilbert and Guoming Lai, <i>Manufacturing & Service Operations Management</i> 25(1):218-234. </li>
+<li>"On-Demand Healthcare Platforms: Impact of Subsidized Q&A Service on Demand for Online Consultation and Offline Appointment," with Ashish Agarwal, Guoming Lai and Weihua Zhou, <i>Information Systems Research.</i> </li>
+<li>"On the Participation, Competition and Welfare at Customer-Intensive Discretionary Service Platforms,"</a> with Xiaofang Wang, Steve Gilbert and Guoming Lai, <i>Manufacturing & Service Operations Management</i> 25(1):218-234. </li>
  -- Previously titled "Pricing, Quality and Competition at On-Demand Healthcare Service Platforms" <br>
-<li><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13271">"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, <i>Production and Operations Management</i> 30: 402-418.</li>
+<li>"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, <i>Production and Operations Management</i> 30: 402-418.</li>
+<li>"Efficient Real-Time Routing for Autonomous Vehicles through Bayesian Correlated Equilibrium: An Information Design Framework,” with Andrew B. Whinston, <i>Information Economics and Policy</i>i> 47 (2019): 14-26.</li>
+</ol>
+</p>
+
+<p>
+<b>Working Papers/Work in Progress</b>
+<ol>
+<li>"Pay Now, Buy Never: The Economics of Consumer Prepayment Schemes," with Hua Zhang and Eric Zou, <i>Under Review</i> </li>
+<li>"AI and Independent Career Moves: Evidence from Creative Workers," with Zeyu Lou </li>
+<li>"Remote Work: Driver or Deterrent of Product Innovation," with Fangchen Song and Ashish Agarwal </li>
+<li>“Flattening the Curve? On-Demand Delivery Platforms and Customer Visits to Restaurants,” with Allen Li </li>li
 </ol>
 </p>
 
@@ -101,10 +112,11 @@ Tsinghua University<br>
 <b>Teaching</b><br>
 CEIBS
 <ul>
-<li>Artificial Intelligence: The New Frontier of Productivity (EMBA Elective), Oct 2025 (scheduled)</li>
-<li>Information Technology Management and Innovation in the Digital Era (EE), Apr 2025</li>
-<li>Information Technology in the New Economy (MBA Elective), Jan 2023/2024, Nov 2024</li>
-<li>Data Analytics and Operations Management (MBA Core), Oct 2024</li>
+<li>Artificial Intelligence: The New Frontier of Productivity (Executive MBA Elective)</li>
+<li>Opening Module with Business Simulation (Executive MBA)</li>
+<li>Information Technology Management and Innovation in the Digital Era (Executive Education))</li>
+<li>Information Technology in the New Economy (MBA Elective)</li>
+<li>Data Analytics and Operations Management (MBA Core)</li>
 </ul>
 	
 Purdue University
