--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<p>
     <b>Email: </b><a href="mailto:yixuanliu@ceibs.edu">yixuanliu@ceibs.edu</a><br>
 
-     <a href="YixuanLiu.pdf"><b>CV</b></a>  <br>
+     <a href="yixuanliu_cv.pdf"><b>CV</b></a>  <br>
 	  </div>
 	</p>      
   
