--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Tsinghua University<br>
 <li>"On the Participation, Competition and Welfare at Customer-Intensive Discretionary Service Platforms,"</a> with Xiaofang Wang, Steve Gilbert and Guoming Lai, <i>Manufacturing & Service Operations Management</i> 25(1):218-234. </li>
  -- Previously titled "Pricing, Quality and Competition at On-Demand Healthcare Service Platforms" <br>
 <li>"International Taxation and Production Outsourcing,"</a> with Guoming Lai and Wenqiang Xiao, <i>Production and Operations Management</i> 30: 402-418.</li>
-<li>"Efficient Real-Time Routing for Autonomous Vehicles through Bayesian Correlated Equilibrium: An Information Design Framework,” with Andrew B. Whinston, <i>Information Economics and Policy</i>i> 47 (2019): 14-26.</li>
+<li>"Efficient Real-Time Routing for Autonomous Vehicles through Bayesian Correlated Equilibrium: An Information Design Framework,” with Andrew B. Whinston, <i>Information Economics and Policy</i> 47 (2019): 14-26.</li>
 </ol>
 </p>
 
@@ -104,12 +104,12 @@ Tsinghua University<br>
 <li>"Pay Now, Buy Never: The Economics of Consumer Prepayment Schemes," with Hua Zhang and Eric Zou, <i>Under Review</i> </li>
 <li>"AI and Independent Career Moves: Evidence from Creative Workers," with Zeyu Lou </li>
 <li>"Remote Work: Driver or Deterrent of Product Innovation," with Fangchen Song and Ashish Agarwal </li>
-<li>“Flattening the Curve? On-Demand Delivery Platforms and Customer Visits to Restaurants,” with Allen Li </li>li
+<li>“Flattening the Curve? On-Demand Delivery Platforms and Customer Visits to Restaurants,” with Allen Li </li>
 </ol>
 </p>
 
 <p>
-<b>Teaching</b><br>
+<b>Teaching</b>
 CEIBS
 <ul>
 <li>Artificial Intelligence: The New Frontier of Productivity (Executive MBA Elective)</li>
