--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <p>	  
 <b>Employment</b><br>
-China Europe International Business School<br>
+China Europe International Business School (CEIBS)<br>
 &emsp; Assistant Professor of Management Information Systems, 2022 - <br>
 Krannert School of Management, Purdue University<br>
 &emsp; Assistant Professor of Management (Management Information Systems Area), 2020 - 2022	
