--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ CEIBS
 <ul>
 <li>Artificial Intelligence: The New Frontier of Productivity (Executive MBA Elective)</li>
 <li>Opening Module with Business Simulation (Executive MBA)</li>
-<li>Information Technology Management and Innovation in the Digital Era (Executive Education))</li>
+<li>Information Technology Management and Innovation in the Digital Era (Executive Education)</li>
 <li>Information Technology in the New Economy (MBA Elective)</li>
 <li>Data Analytics and Operations Management (MBA Core)</li>
 </ul>
