--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Tsinghua University<br>
 </p>
 
 <p>
-<b>Teaching</b>
+<b>Teaching</b><br>
 CEIBS
 <ul>
 <li>Artificial Intelligence: The New Frontier of Productivity (Executive MBA Elective)</li>
