--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Tsinghua University<br>
 <li>"Pay Now, Buy Never: The Economics of Consumer Prepayment Schemes," with Hua Zhang and Eric Zou, <i>Under Review</i> </li>
 <li>"AI and Independent Career Moves: Evidence from Creative Workers," with Zeyu Lou </li>
 <li>"Remote Work: Driver or Deterrent of Product Innovation," with Fangchen Song and Ashish Agarwal </li>
-<li>“Flattening the Curve? On-Demand Delivery Platforms and Customer Visits to Restaurants,” with Allen Li </li>
+<li>"Flattening the Curve? On-Demand Delivery Platforms and Customer Visits to Restaurants," with Allen Li </li>
 </ol>
 </p>
 
